[gd_scene load_steps=4 format=3 uid="uid://b06k20w1aw28g"]

[ext_resource type="Script" path="res://room_manager.gd" id="1_4wfly"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpial"]
size = Vector2(384, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jcymi"]
size = Vector2(384, 224)

[node name="Room_Manager" type="Area2D"]
y_sort_enabled = true
disable_mode = 2
collision_layer = 0
collision_mask = 2
script = ExtResource("1_4wfly")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource("RectangleShape2D_vpial")
debug_color = Color(0.690196, 0.498039, 0.0745098, 0.419608)

[node name="Interactables" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Monsters" type="Node2D" parent="."]
y_sort_enabled = true

[node name="DeloadTime" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeloadBufferArea" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeloadBufferArea"]
shape = SubResource("RectangleShape2D_jcymi")
debug_color = Color(0, 0.6, 0.701961, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
